--- a/frontend/src/app/modules/main/dialogs/categories-dialog/categories-dialog.component.html
+++ b/frontend/src/app/modules/main/dialogs/categories-dialog/categories-dialog.component.html
@@ -1,18 +1,19 @@
 <div [nbSpinner]="isBusy">
-    <app-category-list
-        *ngIf="!editableCategory"
-        [categories]="categories"
-        [selectedCategory]="selectedCategory"
-        (newCategoryClick)="editCategory()"
-        (categoryClick)="categoryClick($event)"
-        (back)="dialogRef.close()">
-    </app-category-list>
-    <app-category-edit
-        *ngIf="editableCategory"
-        [categories]="categories"
-        [category]="editableCategory"
-        [saveButtonEnabled]="isBusy"
-        (back)="editableCategory = undefined; fetch()"
-        (save)="saveCategory($event)">
-    </app-category-edit>
+    @if (editableCategory) {
+        <app-category-edit
+            [categories]="categories"
+            [category]="editableCategory"
+            [saveButtonEnabled]="isBusy"
+            (back)="editableCategory = undefined; fetch()"
+            (save)="saveCategory($event)">
+        </app-category-edit>
+    } @else {
+        <app-category-list
+            [categories]="categories"
+            [selectedCategory]="selectedCategory"
+            (newCategoryClick)="editCategory()"
+            (categoryClick)="categoryClick($event)"
+            (back)="dialogRef.close()">
+        </app-category-list>
+    }
 </div>
