--- a/frontend/src/app/modules/main/header/header.component.html
+++ b/frontend/src/app/modules/main/header/header.component.html
@@ -52,19 +52,20 @@
             </nb-calendar-view-mode>
 
             <ng-template #viewModeRef>
-                <div [ngSwitch]="activeViewMode">
-                    <nb-calendar-year-picker
-                        *ngSwitchCase="viewMode.YEAR"
-                        [year]="visibleDate"
-                        (yearChange)="visibleDate = $event; activeViewMode = viewMode.MONTH">
-                    </nb-calendar-year-picker>
-
-                    <nb-calendar-month-picker
-                        *ngSwitchCase="viewMode.MONTH"
-                        [month]="visibleDate"
-                        (monthChange)="navigateToDate($event); activeViewMode = viewMode.DATE">
-                    </nb-calendar-month-picker>
-                </div>
+                @switch (activeViewMode) {
+                    @case (viewMode.YEAR) {
+                        <nb-calendar-year-picker
+                            [year]="visibleDate"
+                            (yearChange)="visibleDate = $event; activeViewMode = viewMode.MONTH">
+                        </nb-calendar-year-picker>
+                    }
+                    @case (viewMode.MONTH) {
+                        <nb-calendar-month-picker
+                            [month]="visibleDate"
+                            (monthChange)="navigateToDate($event); activeViewMode = viewMode.DATE">
+                        </nb-calendar-month-picker>
+                    }
+                }
             </ng-template>
         </div>
 
